--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@types/node-notifier": "^8.0.0",
+    "chalk": "^4.1.1",
+    "cronosjs": "^1.7.1",
     "form-data": "^4.0.0",
     "got": "^11.8.2",
     "iconv-lite": "^0.6.2",
