refactor: separate cron task

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@types/node-notifier": "^8.0.0",
     "chalk": "^4.1.1",
     "cronosjs": "^1.7.1",
+    "esno": "^0.5.0",
     "form-data": "^4.0.0",
     "got": "^11.8.2",
     "iconv-lite": "^0.6.2",
@@ -14,7 +15,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "esno src/index.ts"
   },
   "repository": {
     "type": "git",
