--- a/package.json
+++ b/package.json
@@ -1,33 +1,8 @@
 {
-  "name": "edoctor-talon-checker",
-  "version": "1.0.0",
-  "description": "Tool for check talon on Belarus online registry (eDoctor system)",
-  "keywords": [],
-  "homepage": "https://github.com/reslear/lorby-checker#readme",
-  "bugs": {
-    "url": "https://github.com/reslear/lorby-checker/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/reslear/lorby-checker.git"
-  },
-  "license": "MIT",
-  "author": "reslear",
-  "main": "dist/index.js",
-  "scripts": {
-    "start": "esno src/index.ts"
-  },
-  "dependencies": {
-    "chalk": "^4.1.1",
-    "cronosjs": "^1.7.1",
-    "esno": "^0.5.0",
-    "form-data": "^4.0.0",
-    "got": "^11.8.2",
-    "iconv-lite": "^0.6.2",
-    "node-notifier": "^9.0.1"
-  },
-  "devDependencies": {
-    "@types/node-notifier": "^8.0.0",
-    "typescript": "^4.2.4"
-  }
+  "name": "root",
+  "private": true,
+  "workspaces": [
+    "packages/*",
+    "apps/*"
+  ]
 }
