--- a/apps/electron/package.json
+++ b/apps/electron/package.json
@@ -6,12 +6,6 @@
   "scripts": {
     "start": "esno src/index.ts"
   },
-  "dependencies": {
-    "cronosjs": "^1.7.1",
-    "edoctor-talon-checker": "file:packages/edoctor-talon-checker",
-    "node-notifier": "^9.0.1"
-  },
-  "devDependencies": {
-    "@types/node-notifier": "^8.0.0"
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
