--- a/packages/edoctor-talon-checker/package.json
+++ b/packages/edoctor-talon-checker/package.json
@@ -2,7 +2,12 @@
   "name": "edoctor-talon-checker",
   "version": "1.0.0",
   "description": "Tool for check talon on Belarus online registry (eDoctor system)",
-  "keywords": [],
+  "keywords": [
+    "edoctor",
+    "belarus",
+    "talon",
+    "checker"
+  ],
   "homepage": "https://github.com/reslear/edoctor-talon-checker#readme",
   "bugs": {
     "url": "https://github.com/reslear/edoctor-talon-checker#readme"
@@ -14,9 +19,10 @@
   "license": "MIT",
   "author": "reslear",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
-    "start": "esno src/index.ts"
+    "build": "tsup src/index.ts --format esm,cjs --dts"
   },
   "dependencies": {
     "form-data": "^4.0.0",
@@ -25,6 +31,7 @@
   },
   "devDependencies": {
     "esno": "^0.5.0",
+    "tsup": "^4.10.1",
     "typescript": "^4.2.4"
   }
 }
