--- a/apps/telegram-bot/package.json
+++ b/apps/telegram-bot/package.json
@@ -1,12 +1,25 @@
 {
   "name": "telegram-bot",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "main": "dist/index.js",
   "scripts": {
+    "dev": "ts-node-dev -r dotenv/config --clear --exit-child --respawn --transpile-only src/index.ts",
+    "start": "ts-node src/index.ts",
     "deploy": "cd ../../ && git subtree push --prefix apps/telegram-bot heroku master"
   },
   "dependencies": {
-    "telegraf": "^4.3.0"
+    "cronosjs": "^1.7.1",
+    "cross-env": "^7.0.3",
+    "dotenv": "^9.0.1",
+    "edoctor-talon-checker": "^1.0.0",
+    "fastify": "^3.15.1",
+    "fastify-telegraf": "^1.0.2",
+    "telegraf": "^4.3.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
+  },
+  "devDependencies": {
+    "ts-node-dev": "^1.1.6"
   }
 }
