fix(telegram-bot): tsconfig

--- a/apps/telegram-bot/tsconfig.json
+++ b/apps/telegram-bot/tsconfig.json
@@ -1,3 +1,10 @@
 {
-  "extends": "../../tsconfig.json"
+  "compilerOptions": {
+    "target": "ES2018",
+    "moduleResolution": "node",
+    "strict": true,
+    "declaration": true,
+    "noUnusedLocals": true,
+    "esModuleInterop": true
+  }
 }
