--- a/apps/telegram-bot/package.json
+++ b/apps/telegram-bot/package.json
@@ -12,10 +12,12 @@
     "@types/node": "^15.0.2",
     "cronosjs": "^1.7.1",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.10.4",
     "dotenv": "^9.0.1",
     "edoctor-talon-checker": "^1.0.0",
     "express": "^4.17.1",
     "telegraf": "^4.3.0",
+    "telegraf-session-local": "^2.1.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
