--- a/apps/telegram-bot/package.json
+++ b/apps/telegram-bot/package.json
@@ -5,25 +5,24 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development ts-node-dev -r dotenv/config --clear --exit-child --respawn --transpile-only src/index.ts",
-    "start": "ts-node -r dotenv/config src/index.ts",
-    "deploy": "cd ../../ && git subtree push --prefix apps/telegram-bot heroku main"
+    "start": "ts-node src/index.ts"
   },
   "dependencies": {
-    "@types/node": "^15.0.2",
+    "@types/node": "^16.7.6",
     "cronosjs": "^1.7.1",
     "cross-env": "^7.0.3",
-    "dayjs": "^1.10.4",
-    "dotenv": "^9.0.1",
+    "dayjs": "^1.10.6",
+    "dotenv": "^10.0.0",
     "edoctor-talon-checker": "^1.0.0",
     "express": "^4.17.1",
-    "telegraf": "^4.3.0",
+    "telegraf": "^4.4.1",
     "telegraf-session-local": "^2.1.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.4"
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11",
-    "ts-node-dev": "^1.1.6"
+    "@types/express": "^4.17.13",
+    "ts-node-dev": "^1.1.8"
   },
   "engines": {
     "node": "14.x"
