--- a/apps/telegram-bot/package.json
+++ b/apps/telegram-bot/package.json
@@ -25,7 +25,7 @@
     "ts-node-dev": "^1.1.8"
   },
   "engines": {
-    "node": "^14",
-    "npm": "^7"
+    "node": ">=14.0.0",
+    "npm": "7"
   }
 }
